2006-11-24	fabian

	* A fix for the anti-aliasing problem by caching the background. Enable the new rendering by 
	  setting the strokewidth to 0:
		defaults write iTerm StrokeWidth -float 0

2006-11-21	fabian

	* Removed some UI code from the writeTask process
	
2006-11-20	fabian

	* Fixed CPU usgae bug related to unclosed dead tab.
	* Reduced update frequency for the tabs in the background.
	* Fixed a memory leak in [VT100Screen setString:ascii:].
	* Fixed Script menu behavior. Now it will only show and launch scpt and app files.
	* Added Refresh option in the script menu.
	* Fixed bug when adding keyboard profile.
	* Fixed a bug that might cause crash when there's a lot of incoming data.
	
2006-11-19	fabian

	* Fixed a toolbar related bug that causes crash.
	* Fixed a few typo in help files.
	
2006-11-17	fabian
	
	* Updated Help files.
	
2006-11-16	fabian

	* Fixed scrolling bug.
	* Fixed a drag&drop bug where newly created window is not properly set up.
	* One more bell related fix.
	* Replaced NSData object STREAM with a plain char buffer to improve performance.
	* Fixed a bug in PTYTask that crashes iTerm.
	* Fixed a bug that keeps PTYSession's data thread from exiting properly sometimes.
	* Disabled Option-click to position cursor. Option key is now used to escape xterm mouse reporting.
	* Now ascii strings are processed separately from nonascii strings. Hopefully this will improve performance.
		
2006-11-15	fabian

	* Fixed URL getting cut bug.
	* Now changing window/tab title  blocks the processing.
	
2006-11-14	fabian

	* Fixed "bookmark folder grey out" bug.
	* Possible fix for resizing related crashes.
	* Fixed "info panel font selection" bug.
	
2006-11-12	fabian

	* Improved eastern asian language double width processing.
	
2006-11-11	fabian

	* Made mouse cursor a tiny bit darker.
	* release 0.9.3
	
2006-11-09	fabian

	* Changed toolbar's execute field's strings to localizable ones.
	
2006-11-08	fabian
