@@ -47,7 +47,6 @@ typedef struct
 	int count;
 } CharCache;
 	
-#define CACHESIZE 2048
 enum { SELECT_CHAR, SELECT_WORD, SELECT_LINE };
 
 @interface PTYTextView : NSView <NSTextInput>
@@ -121,7 +120,7 @@ enum { SELECT_CHAR, SELECT_WORD, SELECT_LINE };
 	BOOL reportingMouseDown;
 	
 	//cache
-	CharCache	charImages[CACHESIZE];
+	CharCache	*charImages;
 	
 	// blinking cursor
 	BOOL blinkingCursor;
